# helixscreen1

./: .clang-format  .clangd  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COPYRIGHT  DEVELOPMENT.md  Doxyfile  GCODE_TOP_SURFACE_RENDERING_FIX.md  HANDOFF.md  Makefile  PHONG_RESEARCH_NOTES.md  README.md  STATUS.md  lv_conf.h  requirements.txt
.claude/: LESSONS.md  README.md  checklist.md  github-triage.local.md  settings.json
.claude-recall/: LESSONS.md
.coding-agent-lessons/: APPROACHES.md  LESSONS.md
android/: .gitignore  build.gradle
android/app/jni/: CMakeLists.txt
config/: helix-launcher.sh  helixconfig.json.template  helixscreen.env  helixscreen.init  helixscreen.service  printer_database.json
data/: helixconfig.json.template
docker/: Dockerfile.pi  Dockerfile.pi32  Dockerfile.snapmaker-u1
docs/: AMS_IMPLEMENTATION_PLAN.md  AMS_MOCK_REALISM_PLAN.md  ARCHITECTURE.md  BED_MESH_RENDERING_INTERNALS.md  BUILD_SYSTEM.md  DEVELOPER_QUICK_REFERENCE.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES.md  FEATURE_PARITY_HANDOFF.md  FEATURE_PARITY_RESEARCH.md  FEATURE_STATUS.md  GCODE_VISUALIZATION.md  HANDOFF.md  HELIX_FALLBACK_MACROS.md  HIDDEN_TESTS_TRACKER.md  IDEAS.md  INPUT_SHAPING_IMPLEMENTATION.md  LOGGING.md  LOG_LEVEL_REFACTOR_PLAN.md  LVGL9_XML_GUIDE.md  MOCK_CLIENT_IMPLEMENTATION_PLAN.md  MOONRAKER_MOCK_REMAINING.md  NOTIFICATION_HISTORY_PLAN.md  OVERLAY_MIGRATION_PLAN.md  OVERLAY_REFACTOR.md  PRE_PRINT_REFACTOR_PLAN.md  PRINT_HISTORY_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  REFACTORING_PLAN.md  REFACTOR_PLAN.md  RELEASE_PROCESS.md  ROADMAP.md  STANDARD_MACROS_HANDOFF.md  STANDARD_MACROS_SPEC.md  TECHNICAL_DEBT_TRACKER.md  TEMP_GRAPH_USAGE.md  TESTING.md  TESTING_DEBT.md  UI_TESTING_PLAN.md  (+1 more)
include/: accel_sensor_manager.h  active_print_media_manager.h  advanced_panel_types.h  ams_backend.h  ams_backend_afc.h  ams_backend_happy_hare.h  ams_backend_mock.h  ams_backend_toolchanger.h  ams_backend_valgace.h  ams_error.h  ams_state.h  ams_types.h  app_constants.h  app_globals.h  application.h  asset_manager.h  async_helpers.h  backlight_backend.h  bed_mesh_coordinate_transform.h  bed_mesh_geometry.h  bed_mesh_gradient.h  bed_mesh_internal.h  bed_mesh_overlays.h  bed_mesh_projection.h  bed_mesh_rasterizer.h  bed_mesh_renderer.h  calibration_types.h  capability_overrides.h  cli_args.h  color_sensor_manager.h  color_sensor_types.h  color_utils.h  config.h  display_backend.h  display_backend_drm.h  display_backend_fbdev.h  display_backend_sdl.h  display_manager.h  display_settings_manager.h  environment_config.h  (+287 more)
mk/: cross.mk  deps.mk  fonts.mk  format.mk  images.mk  patches.mk  pi-dual-link.mk  remote.mk  rules.mk  splash.mk  tests.mk  watchdog.mk
patches/: libhv-streaming-upload.patch  lv_markdown_faux_bold.patch  lvgl-drm-plane-rotation.patch  lvgl-local-changes.patch  lvgl_blend_color_null_guard.patch  lvgl_draw_sw_label_null_guard.patch  lvgl_fbdev_stride_bpp.patch
scripts/: CLAUDE.md  LVGLImage.py  ad5m-screenshot.sh  add-spdx-headers.sh  audit_codebase.sh  benchmark_hosts.sh  benchmark_neon.sh  bundle-installer.sh  bundle-uninstaller.sh  check-deps.sh  dev-release.sh  download_printer_images_headless.py  format-xml.py  generate-manifest.sh  generate-screenshots.sh  generate-test-data.py  generate_gradient_bg.py  generate_icon_header.py  git-stats.sh  helix-launcher.sh  init-worktree.sh  install-bundled.sh  install.sh  package.sh  quality-checks.sh  regen_images.sh  regen_mdi_fonts.sh  regen_placeholder_images.sh  regen_printer_images.sh  regen_text_fonts.sh  resolve-backtrace.sh  screenshot.sh  serve-local-update.sh  setup-worktree.sh  telemetry-analyze.py  telemetry-crashes.py  telemetry-pull.sh  test_clean_shutdown.sh  touch-diag.sh  trim_printer_images.sh  (+2 more)
src/: active_print_media_manager.cpp  ams_backend.cpp  ams_backend_afc.cpp  ams_backend_happy_hare.cpp  ams_backend_mock.cpp  ams_state.cpp  app_globals.cpp  backlight_backend.cpp  bed_mesh_coordinate_transform.cpp  bed_mesh_gradient.cpp  bed_mesh_renderer.cpp  cli_args.cpp  color_utils.cpp  config.cpp  display_backend.cpp  display_backend_fbdev.cpp  ethernet_backend.cpp  ethernet_backend_linux.cpp  ethernet_backend_macos.mm  ethernet_backend_mock.cpp  ethernet_manager.cpp  filament_sensor_manager.cpp  format_utils.cpp  gcode_camera.cpp  gcode_geometry_builder.cpp  gcode_parser.cpp  gcode_renderer.cpp  gcode_tinygl_renderer.cpp  helix_splash.cpp  helix_theme.c  helix_watchdog.cpp  keyboard_layout_provider.cpp  layout_manager.cpp  lvgl_init.cpp  main.cpp  material_icons.cpp  memory_monitor.cpp  moonraker_api.cpp  moonraker_api_advanced.cpp  moonraker_api_files.cpp  (+109 more)
tests/: lvgl_test_fixture.cpp  lvgl_test_fixture.h  test_fixtures.cpp  (+6 more)
(+931 files in other folders)
